--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -13,11 +13,17 @@ body{
     animation: desplazargato 4s linear infinite ;
 }
 
+.gato:hover{
+    animation: cambiar 4s linear none ;
+}
+
 .perro{
     margin-top:79vh;
     width: 25%;
     animation: desplazarperro 4s linear infinite;
 }
+
+
 
 @keyframes desplazargato{
     0%{
@@ -33,7 +39,7 @@ body{
 
     30%{
        transform: translate(-33rem,-11rem);
-       
+       width: 10%;
     }
     60%{
         transform: translate(-40rem,-11rem);
